--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <body>
     <h1>OHAI</h1>
     <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
     <script>
-      System.load('src/main')
+      System.load( 'src/main' )
     </script>
   </body>
 </html>
