--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>CSS Modules & JSPM</title>
   </head>
   <body>
-    <h1>OHAI</h1>
-    <script src="jspm_packages/system.js"></script>
+    <main id="outlet"></main>
+    <script src="jspm_packages/system.src.js"></script>
     <script src="config.js"></script>
     <script>
-      System.load( 'src/main' )
+      System.import( 'src/main' )
     </script>
   </body>
 </html>
