--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main id="outlet"></main>
-    <script src="jspm_packages/system.js"></script>
+    <script src="jspm_packages/system.src.js"></script>
     <script src="config.js"></script>
     <script>
       System.import( 'src/main' )
