added trace mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="jspm_packages/system.src.js"></script>
     <script src="config.js"></script>
     <script>
+      System.trace = true
       System.import( 'src/main' )
     </script>
   </body>
