--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CSS Modules & JSPM</title>
+    <title>CSS Modules &amp; JSPM</title>
   </head>
   <body>
     <main id="outlet"></main>
